--- a/app/src/main/res/layout/fragment.xml
+++ b/app/src/main/res/layout/fragment.xml
@@ -2,14 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="top"
     >
 
-    <TextView android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="here"
-        android:textSize="66px"
-        android:textStyle="bold"
-        android:id="@+id/textContent"
-        android:gravity="center"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/kehan"
+        />
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
+    <!-- courList one-->
+    <TextView
+        android:id="@+id/textContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="math"
+        android:textSize="16sp"
+        android:layout_gravity="left"
+        android:layout_marginLeft="12dp"
+        />
+
+        <TableLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
+
+            <!--第一行-->
+            <TableRow>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="12dp"
+                    android:drawableTop="@drawable/math1"
+                    android:text="概率论"
+                    android:textSize="12sp" />
+            </TableRow>>
+        </TableLayout>>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@android:color/darker_gray"/>
+        <!-- courseList two-->
+        <TextView
+            android:id="@+id/courseList2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="language"
+            android:textSize="16sp"
+            android:layout_gravity="left"/>
+
+    </LinearLayout>
 </LinearLayout>
