--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -41,7 +41,8 @@
             android:layout_height="30dp"
             android:layout_width="200dp"
             android:background="@drawable/border"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="15dp"
+            android:inputType="textPassword"/>
     </TableRow>
 
     <!--the third row-->
@@ -60,7 +61,8 @@
             android:layout_height="30dp"
             android:layout_width="200dp"
             android:background="@drawable/border"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="15dp"
+            android:inputType="textPassword"/>
     </TableRow>
 
     <!--the fourth row-->
@@ -88,20 +90,20 @@
         android:orientation="horizontal"
         android:gravity="left">
 
-        <Button android:id="@+id/sureButton"
+        <Button android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="65dp"
             android:layout_marginTop="25dp"
-            android:text="确 定"
+            android:text="返 回"
             />
 
-        <Button android:id="@+id/backButton"
+        <Button android:id="@+id/sureButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="95dp"
             android:layout_marginTop="25dp"
-            android:text="返 回"
+            android:text="确 定"
             />
     </LinearLayout>
 </TableLayout>
