--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,14 @@
         <item name="android:textColor">@color/colorAccent</item>
     </style>
 
+    <style name="userSettings">
+
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">#FFFF</item>
+
+
+
+    </style>
+
 </resources>
